--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="./style/style.css">
+        <title>Matt's Node Website</title>
+    </head>
+    <body>
+        <div>
+            <h1>Test website</h1>
+        </div>
+        <div>
+            <p>I use too many divs</p>
+        </div>
+        <div>
+            <h2>Placeholder heading</h2>
+        </div>
+        <div>
+            <p>placeholder text</p>
+        </div>
+    </body>
+</html>
